--- a/howcanyouhelp.html
+++ b/howcanyouhelp.html
@@ -3,7 +3,7 @@
     <head>
         <title>Heating in the Hopi Community</title>
         <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
-        <link href = "style.css" rel = "stylesheet">
+        <link href = "css/style.css" rel = "stylesheet">
     </head>
 <body class="d-flex h-100 text-center text-white">
 <div class="cover-container alert-dismissible mx-auto" id = "hero2">
@@ -12,6 +12,8 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link" aria-current="page" href="index.html">Home</a>
         <a class="nav-link active" href="#">How Can You Help</a>
+        <a class="nav-link" href="learn.html">Learn More</a>
+
       </nav>
     </div>
   </header>
@@ -21,7 +23,7 @@
   </main>
 </div>
 <div id = "donate">
-    <p class = "lead" style = "color:black">Deede</p>
+    <p class = "lead" style = "color:black">(insert paragraph here)</p>
     <a href = "https://www.gofundme.com/f/chizh-for-cheii-2020"><h3>Donate</h3></a>
 </div>
     </body>
