--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Heating in the Hopi Community</title>
         <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
-        <link href = "style.css" rel = "stylesheet">
+        <link href = "css/style.css" rel = "stylesheet">
     </head>
 <body class="d-flex h-100 text-center text-white">
 <div class="cover-container p-3 mx-auto" id = "hero">
@@ -12,6 +12,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
+        <a class="nav-link" href="learn.html">Learn More</a>
       </nav>
     </div>
   </header>
