--- a/howcanyouhelp.html
+++ b/howcanyouhelp.html
@@ -23,7 +23,8 @@
   </main>
 </div>
 <div id = "donate">
-    <p class = "lead" style = "color:black">(insert paragraph here)</p>
+    <p class = "lead" style = "color:black">People in the Navajo community have started an organization called Chizh for Cheii, which means “firewood for grandpa” in Navajo (though of course they don’t only help grandpas.) They are attempting the challenging feat of providing a decent heating method for people in the Navajo and Hopi tribes. CFC members strive to help out the community and go great lengths to provide the community with resources such as food, water, firewood, and plenty other essentials. The amount of people with lesser resources is a much larger number than it should be. CFC is trying to drag that number drastically down, and it’s quite the conundrum. But their main goal and what keeps them going is knowing that they are spreading love, hope, and inspiration, and helping people in their community currently in need.
+    </p>
     <a href = "https://www.gofundme.com/f/chizh-for-cheii-2020"><h3>Donate</h3></a>
 </div>
     </body>
