--- a/learn.html
+++ b/learn.html
@@ -3,7 +3,7 @@
     <head>
         <title>Heating in the Hopi Community</title>
         <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
-        <link href = "css/style.css" rel = "stylesheet">
+        <link href = "style.css" rel = "stylesheet">
     </head>
 <body class="d-flex h-100 text-center text-white">
 <div class="cover-container alert-dismissible mx-auto" id = "hero2">
