--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Heating in the Hopi Community</title>
         <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
         <link href = "style.css" rel = "stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     </head>
 <body class="d-flex h-100 text-center text-white">
 <div class="cover-container p-3 mx-auto" id = "hero">
@@ -12,7 +14,7 @@
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
-        <a class="nav-link" href="learn.html">Learn More</a>
+        <a class="nav-link" href="learn.html">What Is The Problem</a>
       </nav>
     </div>
   </header>
