--- a/howcanyouhelp.html
+++ b/howcanyouhelp.html
@@ -4,40 +4,24 @@
         <title>Heating in the Hopi Community</title>
         <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
         <link href = "style.css" rel = "stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     </head>
 <body class="d-flex h-100 text-center text-white">
-<div class="cover-container alert-dismissible mx-auto" id = "hero2">
+<div class="cover-container p-3 mx-auto" id = "hero">
   <header class="mb-auto">
-    <div> 
+    <div>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-      <a class="nav-link" aria-current="page" href="index.html">Home</a>
-      <a class="nav-link active" href="#">How Can You Help</a>
-      <a class="nav-link" href="learn.html">Learn More</a>
-
-    </nav>
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
+        <a class="nav-link" href="learn.html">What Is The Problem</a>
+      </nav>
     </div>
   </header>
- 
+
   <main class="px-3">
-    <h1 id = "mainh12">How Can You Help</h1>
+    <h1 id = "mainh1">Heating In The Hopi Community</h1>
   </main>
-</div>
-<div id = "donate">
-    <p class = "lead" style = "color:black">People in the Navajo community have started an organization called Chizh for Cheii, which means “firewood for grandpa” in Navajo (though of course they don’t only help grandpas.) They are attempting the challenging feat of providing a decent heating method for people in the Navajo and Hopi tribes. CFC members strive to help out the community and go great lengths to provide the community with resources such as food, water, firewood, and plenty other essentials. The amount of people with lesser resources is a much larger number than it should be. CFC is trying to drag that number drastically down, and it’s quite the conundrum. But their main goal and what keeps them going is knowing that they are spreading love, hope, and inspiration, and helping people in their community currently in need.
-    </p>
-    <a href = "https://www.gofundme.com/f/chizh-for-cheii-2020"><h3>Donate</h3></a>
-</div>
-<div id = "wood">
-  <h1 id = "mainh13">Why did we choose wood?</h1>
-  <table class="table">
-    <tr><th>Heating Type</th><th>Cost Per Month(30 days)</th><th>Upfront Cost</th><th>Other Notes</th></tr>
-    <tr><td>Electric</td><td>$216</td><td>$30-150</td><td>None</td></tr>
-    <tr><td>Wood</td><td>$30</td><td>N/A</td><td>Wood is bad for the environment because you need to cut down trees</td></tr>
-    <tr><td>Coal</td><td>$65</td><td>N/A</td><td>Coal mines are bad for the environment. Coal is also bad for your lungs</td></tr>
-  </table>
-  <p class="lead" style = "color:black">
-    
-  </p>
 </div>
     </body>
 </html>
