--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
         <link href = "style.css" rel = "stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+        <meta name="description" content="Help The Hopi Community">
+        <meta name = "keywords" content="School, Heating, Hopi, Help, The, Community, Website, Donate, Problem">
+        <meta name = "author" content="The Nueva School Students">
     </head>
 <body class="d-flex h-100 text-center text-white">
 <div class="cover-container p-3 mx-auto" id = "hero">
