--- a/learn.html
+++ b/learn.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Heating in the Hopi Community</title>
-        <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel = "stylesheet">
-        <link href = "style.css" rel = "stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-    </head>
-<body class="d-flex h-100 text-center text-white">
-<div class="cover-container alert-dismissible mx-auto" id = "hero2">
-  <header class="mb-auto">
-    <div>
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
-        <a class="nav-link active" href="#">What Is The Problem</a>
-      </nav>
-    </div>
-  </header>
 
-  <main class="px-3">
-    <h1 id = "mainh12">What is the problem?</h1>
-  </main>
-</div>
-<div id = "problem">
-    <p class = "lead" style = "color:black">The main coal mine that the main Hopi community normally uses has shut down, which means people aren’t able to heat their homes, resulting in a lot of cold people. Many households are struggling to get the heating to survive. Plus, a handful of people lack whole roofs and windows, (or the entire thing altogether)  which makes it extremely hard for heat to stay in. The Hopi and Navajo people have to get up around 3 times to check fire, which means they can’t get much sleep. But the elders have it worse. Some of them have to burn their own clothes for heat. In summary, the main issue is that the Hopi and Navajo tribes are struggling to get enough heating to survive, and need wood and/or coal.</p>
-</div>
-    </body>
+<head>
+  <title>Heating in the Hopi Community</title>
+  <link href="https://bootswatch.com/4/cerulean/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+</head>
+
+<body class="h-100 text-center text-white">
+  <div class="cover-container alert-dismissible" id="hero2">
+    <header class="mb-auto">
+      <div>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
+          <a class="nav-link active" href="#">What Is The Problem</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="px-3">
+      <h1 id="mainh12">What is the problem?</h1>
+    </main>
+  </div>
+  <div id="problem">
+    <p class="lead" style="color:black">The main coal mine that the main Hopi community normally uses has shut down,
+      which means people aren’t able to heat their homes, resulting in a lot of cold people. Many households are
+      struggling to get the heating to survive. Plus, a handful of people lack whole roofs and windows, (or the entire
+      thing altogether) which makes it extremely hard for heat to stay in. The Hopi and Navajo people have to get up
+      around 3 times to check fire, which means they can’t get much sleep. But the elders have it worse. Some of them
+      have to burn their own clothes for heat. In summary, the main issue is that the Hopi and Navajo tribes are
+      struggling to get enough heating to survive, and need wood and/or coal.</p>
+  </div>
+</body>
+
 </html>
