--- a/howcanyouhelp.html
+++ b/howcanyouhelp.html
@@ -17,7 +17,7 @@
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
           <a class="nav-link active" href="#">How Can You Help</a>
           <a class="nav-link" href="learn.html">What Is The Problem</a>
-
+          <a class="nav-link" href="done.html">What has been done?</a>
         </nav>
       </div>
     </header>
