--- a/learn.html
+++ b/learn.html
@@ -17,6 +17,7 @@
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
           <a class="nav-link active" href="#">What Is The Problem</a>
+          <a class="nav-link" href="done.html">What has been done?</a>
         </nav>
       </div>
     </header>
