--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
           <a class="nav-link" href="learn.html">What Is The Problem</a>
+          <a class="nav-link" href="done.html">What has been done?</a>
         </nav>
       </div>
     </header>
