--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="d-flex h-100 text-center text-white">
+  <img id = "logo" src = "logo.png">
   <div class="cover-container p-3 mx-auto" id="hero">
     <header class="mb-auto">
       <div>
