--- a/howcanyouhelp.html
+++ b/howcanyouhelp.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="h-100 text-center text-white">
+  <img id="logo" src="logo.png">
   <div class="cover-container alert-dismissible" id="hero2">
     <header class="mb-auto">
       <div>
