--- a/done.html
+++ b/done.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="h-100 text-center text-white">
+    <img id="logo" src="logo.png">
     <div class="cover-container alert-dismissible" id="hero2">
         <header class="mb-auto">
             <div>
@@ -29,7 +30,8 @@
     <div id="problem">
         <p class="lead" style="color:black">A nonprofit organization called Red Feather Development Group is easing the
             hardship, often bringing wood and coal to help the Hopi and Navajo communities. The GoFundMe at
-            <a href="https://www.gofundme.com/f/chizh-for-cheii-2020">https://www.gofundme.com/f/chizh-for-cheii-2020</a>
+            <a
+                href="https://www.gofundme.com/f/chizh-for-cheii-2020">https://www.gofundme.com/f/chizh-for-cheii-2020</a>
             uses the money they receive to purchase and distribute wood
             to the community. Another group, the Forest Service is helping by harvesting and collecting wood to help.
             Also, ordinary people are raising awareness about this issue, creating their own GoFundMe,
