--- a/howcanyouhelp.html
+++ b/howcanyouhelp.html
@@ -16,9 +16,9 @@
       <div>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link active" href="#">How Can You Help</a>
           <a class="nav-link" href="learn.html">What Is The Problem</a>
-          <a class="nav-link" href="done.html">What has been done?</a>
+          <a class="nav-link" href="done.html">What Has Been Done</a>
+          <a class="nav-link active" href="#">How Can You Help</a>      
         </nav>
       </div>
     </header>
@@ -37,9 +37,7 @@
       their main goal and what keeps them going is knowing that they are spreading love, hope, and inspiration, and
       helping people in their community currently in need.
     </p>
-    <a href="https://www.gofundme.com/f/chizh-for-cheii-2020">
-      <h3>Donate</h3>
-    </a>
+    <div id = "donatebutton" class="gfm-embed" data-url="https://www.gofundme.com/f/chizh-for-cheii-2020/widget/medium/"></div><script src="https://www.gofundme.com/static/js/embed.js"></script>
   </div>
   <div id="wood">
     <h1 id="mainh13">Why did we choose wood?</h1>
@@ -47,26 +45,22 @@
       <tr>
         <th>Heating Type</th>
         <th>Cost Per Month(30 days)</th>
-        <th>Upfront Cost</th>
         <th>Other Notes</th>
-      </tr>
-      <tr>
-        <td>Electric</td>
-        <td>$216</td>
-        <td>$30-150</td>
-        <td>None</td>
-      </tr>
-      <tr>
-        <td>Wood</td>
-        <td>$30</td>
-        <td>N/A</td>
-        <td>Wood is bad for the environment because you need to cut down trees</td>
       </tr>
       <tr>
         <td>Coal</td>
         <td>$65</td>
-        <td>N/A</td>
         <td>Coal mines are bad for the environment. Coal is also bad for your lungs</td>
+      </tr>
+      <tr>
+        <td>Wood</td>
+        <td>$30</td>
+        <td>Wood is better for the environment then coal.</td>
+      </tr>
+      <tr>
+        <td>Electric</td>
+        <td>$216</td>
+        <td>This is a long term goal.</td>
       </tr>
     </table>
     <p class="lead" style="color:black">
