--- a/done.html
+++ b/done.html
@@ -16,15 +16,15 @@
             <div>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
                     <a class="nav-link" href="learn.html">What Is The Problem</a>
-                    <a class="nav-link active" href="#">What has been done?</a>
+                    <a class="nav-link active" href="#">What Has Been Done</a>
+                    <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>                    
                 </nav>
             </div>
         </header>
 
         <main class="px-3">
-            <h1 id="mainh12">What is the problem?</h1>
+            <h1 id="mainh12">What has been done?</h1>
         </main>
     </div>
     <div id="problem">
