--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
           <a class="nav-link" href="learn.html">What Is The Problem</a>
-          <a class="nav-link" href="done.html">What has been done?</a>
+          <a class="nav-link" href="done.html">What Has Been Done</a>
+          <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
         </nav>
       </div>
     </header>
