--- a/learn.html
+++ b/learn.html
@@ -16,9 +16,9 @@
       <div>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
           <a class="nav-link active" href="#">What Is The Problem</a>
-          <a class="nav-link" href="done.html">What has been done?</a>
+          <a class="nav-link" href="done.html">What Has Been Done</a>
+          <a class="nav-link" href="howcanyouhelp.html">How Can You Help</a>
         </nav>
       </div>
     </header>
@@ -32,7 +32,7 @@
       which means people aren’t able to heat their homes, resulting in a lot of cold people. Many households are
       struggling to get the heating to survive. Plus, a handful of people lack whole roofs and windows, (or the entire
       thing altogether) which makes it extremely hard for heat to stay in. The Hopi and Navajo people have to get up
-      around 3 times to check fire, which means they can’t get much sleep. But the elders have it worse. Some of them
+      around 3 times to check the fire, which means they can’t get much sleep. But the elders have it worse. Some of them
       have to burn their own clothes for heat. In summary, the main issue is that the Hopi and Navajo tribes are
       struggling to get enough heating to survive, and need wood and/or coal.</p>
   </div>
